--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -20,8 +20,8 @@ dependencies {
 
 // -----
 
-apply plugin: 'signing'
-apply plugin: 'maven'
+//apply plugin: 'signing'
+//apply plugin: 'maven'
 
 /*ext {
     groupId = 'com.github.chenupt.android'
